let 'em be jaggy - adds backface-visibility and preserve-3d to images to prevent the jitter CODECANYON RELEASE :: packaged as 2.6

--- a/app/css/photoMosaic.css
+++ b/app/css/photoMosaic.css
@@ -43,24 +43,36 @@
 /* base */
 .PM_csstransforms.PM_csstransitions .photoMosaic img {
     -webkit-transform-origin: center center;
-    -moz-transform-origin: center center;
-    -o-transform-origin: center center;
-    -ms-transform-origin: center center;
-    transform-origin: center center;
+       -moz-transform-origin: center center;
+        -ms-transform-origin: center center;
+         -o-transform-origin: center center;
+            transform-origin: center center;
 
     -webkit-transition: all 0.3s ease-out 0s;
-    -moz-transition: all 0.3s ease-out 0s;
-    -o-transition: all 0.3s ease-out 0s;
-    -ms-transition: all 0.3s ease-out 0s;
-    transition: all 0.3s ease-out 0s;
+       -moz-transition: all 0.3s ease-out 0s;
+        -ms-transition: all 0.3s ease-out 0s;
+         -o-transition: all 0.3s ease-out 0s;
+            transition: all 0.3s ease-out 0s;
+
+    -webkit-transform-style: preserve-3d;
+       -moz-transform-style: preserve-3d;
+        -ms-transform-style: preserve-3d;
+         -o-transform-style: preserve-3d;
+            transform-style: preserve-3d;
+
+    -webkit-backface-visibility: hidden;
+       -moz-backface-visibility: hidden;
+        -ms-backface-visibility: hidden;
+         -o-backface-visibility: hidden;
+            backface-visibility: hidden;
 }
 
 .PM_csstransforms.PM_csstransitions .resizing .photoMosaic img {
     -webkit-transition: none;
-    -moz-transition: none;
-    -o-transition: none;
-    -ms-transition: none;
-    transition: none;
+       -moz-transition: none;
+        -ms-transition: none;
+         -o-transition: none;
+            transition: none;
 }
 
 .PM_csstransforms.PM_csstransitions .photoMosaic.transition-none .loading img { }
@@ -69,10 +81,10 @@
     /* good for example
         opacity:0;
         -webkit-transform: rotate( -5deg ) scale( 0.95 );
-        -moz-transform: rotate( -5deg ) scale( 0.95 );
-        -o-transform: rotate( -5deg ) scale( 0.95 );
-        -ms-transform: rotate( -5deg ) scale( 0.95 );
-        transform: rotate( -5deg ) scale( 0.95 );
+           -moz-transform: rotate( -5deg ) scale( 0.95 );
+            -ms-transform: rotate( -5deg ) scale( 0.95 );
+             -o-transform: rotate( -5deg ) scale( 0.95 );
+                transform: rotate( -5deg ) scale( 0.95 );
     */
 }
 
@@ -83,53 +95,53 @@
 .PM_csstransforms.PM_csstransitions .photoMosaic.transition-scale-up .loading img {
     opacity: 0;
     -webkit-transform: scale( 0.95 );
-    -moz-transform: scale( 0.95 );
-    -o-transform: scale( 0.95 );
-    -ms-transform: scale( 0.95 );
-    transform: scale( 0.95 );
+       -moz-transform: scale( 0.95 );
+        -ms-transform: scale( 0.95 );
+         -o-transform: scale( 0.95 );
+            transform: scale( 0.95 );
 }
 
 .PM_csstransforms.PM_csstransitions .photoMosaic.transition-scale-down .loading img {
     opacity: 0;
     -webkit-transform: scale( 1.15 );
-    -moz-transform: scale( 1.15 );
-    -o-transform: scale( 1.15 );
-    -ms-transform: scale( 1.15 );
-    transform: scale( 1.15 );
+       -moz-transform: scale( 1.15 );
+        -ms-transform: scale( 1.15 );
+         -o-transform: scale( 1.15 );
+            transform: scale( 1.15 );
 }
 
 .PM_csstransforms.PM_csstransitions .photoMosaic.transition-slide-up .loading img {
     opacity: 0;
     -webkit-transform: translateY( 5% );
-    -moz-transform: translateY( 5% );
-    -o-transform: translateY( 5% );
-    -ms-transform: translateY( 5% );
-    transform: translateY( 5% );
+       -moz-transform: translateY( 5% );
+        -ms-transform: translateY( 5% );
+         -o-transform: translateY( 5% );
+            transform: translateY( 5% );
 }
 
 .PM_csstransforms.PM_csstransitions .photoMosaic.transition-slide-down .loading img {
     opacity: 0;
     -webkit-transform: translateY( -5% );
-    -moz-transform: translateY( -5% );
-    -o-transform: translateY( -5% );
-    -ms-transform: translateY( -5% );
-    transform: translateY( -5% );
+       -moz-transform: translateY( -5% );
+        -ms-transform: translateY( -5% );
+         -o-transform: translateY( -5% );
+            transform: translateY( -5% );
 }
 
 .PM_csstransforms.PM_csstransitions .photoMosaic.transition-slide-left .loading img {
     opacity: 0;
     -webkit-transform: translateX( 5% );
-    -moz-transform: translateX( 5% );
-    -o-transform: translateX( 5% );
-    -ms-transform: translateX( 5% );
-    transform: translateX( 5% );
+       -moz-transform: translateX( 5% );
+        -ms-transform: translateX( 5% );
+         -o-transform: translateX( 5% );
+            transform: translateX( 5% );
 }
 
 .PM_csstransforms.PM_csstransitions .photoMosaic.transition-slide-right .loading img {
     opacity: 0;
     -webkit-transform: translateX( -5% );
-    -moz-transform: translateX( -5% );
-    -o-transform: translateX( -5% );
-    -ms-transform: translateX( -5% );
-    transform: translateX( -5% );
+       -moz-transform: translateX( -5% );
+        -ms-transform: translateX( -5% );
+         -o-transform: translateX( -5% );
+            transform: translateX( -5% );
 }
